--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "public/electron.js",
   "homepage": "./",
   "dependencies": {
-
     "@chatscope/chat-ui-kit-react": "^1.10.1",
-
     "@clerk/clerk-react": "^4.26.3",
-
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
@@ -30,9 +27,11 @@
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mui": "^0.0.1",
     "openai": "^4.11.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
